# cpp_hw_15_kkmeans

./: .travis.yml  CMakeLists.txt  Kkmeans_example.txt  Kkmeans_starsky.txt  README.md  kkmeans_example_res.txt  kkmeans_res.txt  main.cpp
